# neo4j-n20s

./: .gitignore  BEST_PRACTICES.md  CONTEXT.md  LICENSE  README.md  TEMPLATES.md  nordf-hybrid-architecture.html  pom.xml
.github/workflows/: build.yml  release.yml
demo/: cosmetics-regulation-demo.cypher  drug-interaction-demo.cypher
demo_bookmarks/: n20s-all-demos.csv  neo4j_query_saved_cypher_2026-6-29.csv
examples/: .env.example  ai_chef.ipynb
n20s-core/: pom.xml
n20s-core/src/main/java/n20s/core/: GraphCatalog.java  GraphEngine.java  TemplateEngine.java  TripleParser.java
n20s-core/src/main/java/n20s/core/model/: AddTurtleResult.java  DropResult.java  ExplainResult.java  GraphInfo.java  InferResult.java  ProjectResult.java  QueryResult.java  TemplateResult.java  TripleResult.java  (+3 more)
n20s-core/src/test/java/n20s/core/: GraphEngineTest.java  TemplateEngineTest.java
n20s-plugin/: pom.xml
n20s-plugin/demo/: cosmetics-regulation-demo.cypher
n20s-plugin/src/main/java/n20s/: Args.java  GraphAddTurtle.java  GraphProcedures.java  GraphProject.java  GraphProjectTemplate.java
n20s-plugin/src/test/java/n20s/: N20sTest.java
n20s-python/: README.md  pyproject.toml  setup.py
n20s-python/n20s/: client.py
n20s-python/tests/: test_conversion.py  test_integration.py
n20s-server/: Dockerfile  pom.xml
n20s-server/src/main/java/n20s/server/: GraphRoutes.java  N20sServer.java
n20s-server/src/test/java/n20s/server/: GraphRoutesTest.java
src/main/java/n20s/: GraphCatalog.java  GraphProcedures.java  GraphProject.java
src/test/java/n20s/: N20sTest.java
